<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.thaonguyenlp.myapplication.GameActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginRight="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/choose_next"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/textView2" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginRight="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/back"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginRight="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/back"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
        app:layout_constraintEnd_toStartOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/back"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.947"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/key_1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:onClick="clickNumber"
        android:text="@string/key_1"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/key_2"
        app:layout_constraintTop_toTopOf="@+id/button_next" />

    <Button
        android:id="@+id/key_2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:onClick="clickNumber"
        android:text="@string/key_2"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/key_1"
        app:layout_constraintEnd_toStartOf="@+id/key_3" />

    <Button
        android:id="@+id/key_3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:onClick="clickNumber"
        android:text="@string/key_3"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/key_2"
        app:layout_constraintEnd_toStartOf="@+id/button_next" />

    <Button
        android:id="@+id/button_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="clickCheck"
        android:text="@string/check_btn"
        app:layout_constraintEnd_toEndOf="@+id/button_next"
        app:layout_constraintTop_toTopOf="@+id/key_6" />

    <Button
        android:id="@+id/key_4"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:onClick="clickNumber"
        android:text="@string/key_4"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/key_1"
        app:layout_constraintTop_toBottomOf="@+id/key_1" />

    <Button
        android:id="@+id/key_5"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:onClick="clickNumber"
        android:text="@string/key_5"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/key_4"
        app:layout_constraintStart_toStartOf="@+id/key_2" />

    <Button
        android:id="@+id/key_6"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:onClick="clickNumber"
        android:text="@string/key_6"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/key_5"
        app:layout_constraintStart_toStartOf="@+id/key_3" />

    <Button
        android:id="@+id/key_9"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:onClick="clickNumber"
        android:text="@string/key_9"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/key_8"
        app:layout_constraintStart_toStartOf="@+id/key_6" />

    <Button
        android:id="@+id/key_7"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:onClick="clickNumber"
        android:text="@string/key_7"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/key_4"
        app:layout_constraintTop_toBottomOf="@+id/key_4" />

    <Button
        android:id="@+id/key_8"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:onClick="clickNumber"
        android:text="@string/key_8"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/key_7"
        app:layout_constraintStart_toStartOf="@+id/key_5" />

    <Button
        android:id="@+id/button_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="scoreGame"
        android:text="@string/high_score_btn"
        app:layout_constraintBottom_toBottomOf="@+id/key_10"
        app:layout_constraintStart_toStartOf="@+id/key_9" />

    <Button
        android:id="@+id/button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="224dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:onClick="clickNext"
        android:text="@string/next_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.985"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/img_true"
        app:layout_constraintEnd_toEndOf="@+id/textView1"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        app:srcCompat="@mipmap/ic_true" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/img_true"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@mipmap/ic_true" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/img_true"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@mipmap/ic_true" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/img_true"
        android:onClick="resultGame"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@mipmap/ic_true" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/img_false"
        app:layout_constraintEnd_toEndOf="@+id/textView1"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        app:srcCompat="@mipmap/ic_false" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/img_false"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@mipmap/ic_false" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/img_false"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@mipmap/ic_false" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/img_false"
        android:onClick="resultGame"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@mipmap/ic_false" />

    <Button
        android:id="@+id/button_restart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="restartGame"
        android:text="@string/restart_btn"
        app:layout_constraintEnd_toEndOf="@+id/button_check"
        app:layout_constraintTop_toTopOf="@+id/key_9" />

    <Button
        android:id="@+id/key_10"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:onClick="clickNumber"
        android:text="@string/key_10"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/key_8"
        app:layout_constraintTop_toBottomOf="@+id/key_8" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
        app:layout_constraintStart_toEndOf="@+id/textView6" />

</android.support.constraint.ConstraintLayout>
